--- a/sys/arch/x68k/usr.bin/palette/Makefile
+++ b/sys/arch/x68k/usr.bin/palette/Makefile
@@ -1,5 +1,6 @@
-#	$NetBSD: Makefile,v 1.1 1996/05/05 12:17:19 oki Exp $
+#	$NetBSD: Makefile,v 1.2 1997/06/22 07:09:05 mrg Exp $
 
 PROG=palette
+NOMAN=yes
 
 .include <bsd.prog.mk>
