--- a/sys/arch/x68k/usr.bin/rtcalarm/Makefile
+++ b/sys/arch/x68k/usr.bin/rtcalarm/Makefile
@@ -1,6 +1,6 @@
-#	$NetBSD: Makefile,v 1.1 1996/05/05 12:17:19 oki Exp $
+#	$NetBSD: Makefile,v 1.2 1997/06/22 07:09:07 mrg Exp $
 
 PROG=rtcalarm
-MAN=rtcalarm.8
+NOMAN=yes
 
 .include <bsd.prog.mk>
